tests/paczka1/fuzzy1/63589496.err
Error in line 2: c8t4VMI5D A546 76,6
Error in line 9: c8t4VMI5D S683 26,5
Error in line 8: S683 S683 45,6
Error in line 30: Z0y9t65HFg A115 60,3
